--- a/store.html
+++ b/store.html
@@ -217,7 +217,34 @@ const products = [
     name: "Rog Ally X",
     image: "product5.jpg",
     price: 799.99,
-    buyEmbed: `<!-- PLACE FULL SQUARE EMBED HERE -->`
+    buyEmbed: `<div style="
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  width: 259px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+  border-radius: 10px;
+  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
+  ">
+  <div style="padding: 20px;">
+    <a target="_blank" href="https://square.link/u/rDm8VsUh?src=embed" style="
+    display: inline-block;
+    font-size: 18px;
+    line-height: 48px;
+    height: 48px;
+    color: #000000;
+    min-width: 212px;
+    background-color: #ffbf00;
+    text-align: center;
+    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+    border-radius: 0px;
+  ">Buy now</a>
+  </div>
+</div>`
   },
   {
     name: "Xbox Series S With Controller",
@@ -260,6 +287,7 @@ const products = [
 
 </body>
 </html>
+
 
 
 
