--- a/store.html
+++ b/store.html
@@ -254,13 +254,13 @@ const products = [
   },
   {
     name: "ASUS TUFF Gaming Laptop",
-    image: "product7.jpg",
+    image: "product7.JPG",
     price: 629,
     buyEmbed: `<!-- PLACE FULL SQUARE EMBED HERE -->`
   },
   {
     name: "1991 Classic Major League Baseball Trivia Boardgame Series 2",
-    image: "product8.jpg",
+    image: "product8.JPG",
     price: 50,
     buyEmbed: `<!-- PLACE FULL SQUARE EMBED HERE -->`
   }
@@ -287,6 +287,7 @@ const products = [
 
 </body>
 </html>
+
 
 
 
