--- a/store.html
+++ b/store.html
@@ -344,7 +344,73 @@ const products = [
   ">Buy now</a>
   </div>
 </div>`
-  }
+  },
+   {
+    name: "Nintendo Switch gen 1 with Classic color Controllers",
+    image: "product9.jpg",
+    price: 50,
+    buyEmbed: `<div style="
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  width: 259px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+  border-radius: 10px;
+  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
+  ">
+  <div style="padding: 20px;">
+    <a target="_blank" href="https://square.link/u/30Us1moy?src=embed" style="
+    display: inline-block;
+    font-size: 18px;
+    line-height: 48px;
+    height: 48px;
+    color: #000000;
+    min-width: 212px;
+    background-color: #ffbf00;
+    text-align: center;
+    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+    border-radius: 0px;
+  ">Buy now</a>
+  </div>
+</div>`
+   },
+   {
+    name: "Apple Pro Max Headphones",
+    image: "product10.jpg",
+    price: 500,
+    buyEmbed: `<div style="
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  width: 259px;
+  background: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
+  border-radius: 10px;
+  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
+  ">
+  <div style="padding: 20px;">
+    <a target="_blank" href="https://square.link/u/39Q5LFvj?src=embed" style="
+    display: inline-block;
+    font-size: 18px;
+    line-height: 48px;
+    height: 48px;
+    color: #000000;
+    min-width: 212px;
+    background-color: #ffbf00;
+    text-align: center;
+    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
+    border-radius: 0px;
+  ">Buy now</a>
+  </div>
+</div>`}
+  
 ];
 
 
@@ -368,6 +434,7 @@ const products = [
 
 </body>
 </html>
+
 
 
 
