--- a/store.html
+++ b/store.html
@@ -20,16 +20,42 @@
   .footer {background:#222; color:#ccc; padding:20px; text-align:center;}
   .footer a {color:#fff; text-decoration:none; margin:0 5px;}
   .navbar {position:sticky; top:0; z-index:1000;}
+
+  /* Grid Layout */
+  .product-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+    margin-top: 30px;
+  }
+
+  .product {
+    background: #fff;
+    padding: 10px;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+  }
+
   .product img {
     max-width: 100%;
     height: auto;
-    min-width: 200px;
-    display: block;
-    margin: 0 auto;
     border-radius: 6px;
   }
-  .product {margin-bottom:20px;}
-  .price {color:#e67e22; font-weight:bold;}
+
+  .product h4 {
+    margin: 10px 0 5px;
+    font-size: 16px;
+  }
+
+  .product .price {
+    color:#e67e22;
+    font-weight:bold;
+    margin-bottom: 10px;
+  }
+
   .social-icons i {margin:0 8px; font-size:20px;}
 </style>
 </head>
@@ -50,7 +76,7 @@
 
 <!-- Product Grid -->
 <div class="w3-content" style="max-width:1200px">
-  <div class="w3-row-padding w3-margin-top product-container">
+  <div class="product-container">
     <!-- Products will be injected here by JavaScript -->
   </div>
 </div>
@@ -71,8 +97,7 @@
   </div>
 </footer>
   
-<!-- products -->
-  
+<!-- Products -->
 <script>
 document.addEventListener("DOMContentLoaded", function() {
 const products = [
@@ -80,351 +105,68 @@ const products = [
     name: "Oled Nintendo Switch with White Controllers",
     image: "product1.jpg",
     price: 225,
-    buyEmbed: `<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-  <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/tz5KiDom?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #000000;
-    min-width: 212px;
-    background-color: #ffbf00;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 0px;
-  ">Buy now</a>
-  </div>
-</div>
-`
+    buyEmbed: `<div style="overflow:auto;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;width:259px;background:#FFFFFF;border:1px solid rgba(0,0,0,0.1);box-shadow:-2px 10px 5px rgba(0,0,0,0);border-radius:10px;font-family:SQ Market,Helvetica,Arial,sans-serif;">
+  <div style="padding:20px;">
+    <a target="_blank" href="https://square.link/u/tz5KiDom?src=embed" style="display:inline-block;font-size:18px;line-height:48px;height:48px;color:#000000;min-width:212px;background-color:#ffbf00;text-align:center;box-shadow:0 0 0 1px rgba(0,0,0,.1) inset;border-radius:0px;">Buy now</a>
+  </div></div>`
   },
   {
     name: "Dual Sense Edge Playstation Controller",
     image: "product2.jpg",
     price: 150,
-    buyEmbed: `
-<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
-">
-  <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/XLbdycEy?src=embed" style="
-      display: inline-block;
-      font-size: 18px;
-      line-height: 48px;
-      height: 48px;
-      color: #000000;
-      min-width: 212px;
-      background-color: #ffbf00;
-      text-align: center;
-      box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-      border-radius: 0px;
-    ">Buy now</a>
-  </div>
-</div>
-`
+    buyEmbed: `<div style="overflow:auto;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;width:259px;background:#FFFFFF;border:1px solid rgba(0,0,0,0.1);box-shadow:-2px 10px 5px rgba(0,0,0,0);border-radius:10px;font-family:SQ Market,Helvetica,Arial,sans-serif;">
+  <div style="padding:20px;">
+    <a target="_blank" href="https://square.link/u/XLbdycEy?src=embed" style="display:inline-block;font-size:18px;line-height:48px;height:48px;color:#000000;min-width:212px;background-color:#ffbf00;text-align:center;box-shadow:0 0 0 1px rgba(0,0,0,.1) inset;border-radius:0px;">Buy now</a>
+  </div></div>`
   },
   {
     name: "Dewalt Combo Kit",
     image: "product3.jpg",
     price: 150,
-    buyEmbed: `
-<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
-">
-  <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/VcPJQ0wj?src=embed" style="
-      display: inline-block;
-      font-size: 18px;
-      line-height: 48px;
-      height: 48px;
-      color: #000000;
-      min-width: 212px;
-      background-color: #ffbf00;
-      text-align: center;
-      box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-      border-radius: 0px;
-    ">Buy now</a>
-  </div>
-</div>
-`
+    buyEmbed: `<div style="overflow:auto;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;width:259px;background:#FFFFFF;border:1px solid rgba(0,0,0,0.1);box-shadow:-2px 10px 5px rgba(0,0,0,0);border-radius:10px;font-family:SQ Market,Helvetica,Arial,sans-serif;">
+  <div style="padding:20px;">
+    <a target="_blank" href="https://square.link/u/VcPJQ0wj?src=embed" style="display:inline-block;font-size:18px;line-height:48px;height:48px;color:#000000;min-width:212px;background-color:#ffbf00;text-align:center;box-shadow:0 0 0 1px rgba(0,0,0,.1) inset;border-radius:0px;">Buy now</a>
+  </div></div>`
   },
   {
     name: "NutriBullet",
     image: "product4.jpg",
     price: 110,
-    buyEmbed: `<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-  <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/F1Uf31eH?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #000000;
-    min-width: 212px;
-    background-color: #ffbf00;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 0px;
-  ">Buy now</a>
-  </div>
-</div>`
+    buyEmbed: `<div style="overflow:auto;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;width:259px;background:#FFFFFF;border:1px solid rgba(0,0,0,0.1);box-shadow:-2px 10px 5px rgba(0,0,0,0);border-radius:10px;font-family:SQ Market,Helvetica,Arial,sans-serif;">
+  <div style="padding:20px;">
+    <a target="_blank" href="https://square.link/u/F1Uf31eH?src=embed" style="display:inline-block;font-size:18px;line-height:48px;height:48px;color:#000000;min-width:212px;background-color:#ffbf00;text-align:center;box-shadow:0 0 0 1px rgba(0,0,0,.1) inset;border-radius:0px;">Buy now</a>
+  </div></div>`
   },
   {
     name: "Rog Ally X",
     image: "product5.jpg",
     price: 799.99,
-    buyEmbed: `<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-  <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/rDm8VsUh?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #000000;
-    min-width: 212px;
-    background-color: #ffbf00;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 0px;
-  ">Buy now</a>
-  </div>
-</div>`
+    buyEmbed: `<div style="overflow:auto;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;width:259px;background:#FFFFFF;border:1px solid rgba(0,0,0,0.1);box-shadow:-2px 10px 5px rgba(0,0,0,0);border-radius:10px;font-family:SQ Market,Helvetica,Arial,sans-serif;">
+  <div style="padding:20px;">
+    <a target="_blank" href="https://square.link/u/rDm8VsUh?src=embed" style="display:inline-block;font-size:18px;line-height:48px;height:48px;color:#000000;min-width:212px;background-color:#ffbf00;text-align:center;box-shadow:0 0 0 1px rgba(0,0,0,.1) inset;border-radius:0px;">Buy now</a>
+  </div></div>`
   },
   {
     name: "Xbox Series S With Controller",
     image: "product6.jpg",
     price: 275,
-    buyEmbed: `<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-  <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/uFSG91LU?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #000000;
-    min-width: 212px;
-    background-color: #ffbf00;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 0px;
-  ">Buy now</a>
-  </div>
-</div>`
-  },
-  {
-    name: "ASUS TUFF Gaming Laptop",
-    image: "product7.jpg",
-    price: 629,
-    buyEmbed: `<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-  <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/WXtCJLNJ?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #000000;
-    min-width: 212px;
-    background-color: #ffbf00;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 0px;
-  ">Buy now</a>
-  </div>
-</div>`
-  },
-  {
-    name: "1991 Classic Major League Baseball Trivia Boardgame Series 2",
-    image: "product8.jpg",
-    price: 50,
-    buyEmbed: `<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-  <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/M9x2EiXz?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #000000;
-    min-width: 212px;
-    background-color: #ffbf00;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 0px;
-  ">Buy now</a>
-  </div>
-</div>`
-  },
-   {
-    name: "Nintendo Switch gen 1 with Classic color Controllers",
-    image: "product9.jpg",
-    price: 50,
-    buyEmbed: `<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-  <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/30Us1moy?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #000000;
-    min-width: 212px;
-    background-color: #ffbf00;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 0px;
-  ">Buy now</a>
-  </div>
-</div>`
-   },
-   {
-    name: "Apple Pro Max Headphones",
-    image: "product10.jpg",
-    price: 500,
-    buyEmbed: `<div style="
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  align-items: center;
-  width: 259px;
-  background: #FFFFFF;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 10px 5px rgba(0, 0, 0, 0);
-  border-radius: 10px;
-  font-family: SQ Market, SQ Market, Helvetica, Arial, sans-serif;
-  ">
-  <div style="padding: 20px;">
-    <a target="_blank" href="https://square.link/u/39Q5LFvj?src=embed" style="
-    display: inline-block;
-    font-size: 18px;
-    line-height: 48px;
-    height: 48px;
-    color: #000000;
-    min-width: 212px;
-    background-color: #ffbf00;
-    text-align: center;
-    box-shadow: 0 0 0 1px rgba(0,0,0,.1) inset;
-    border-radius: 0px;
-  ">Buy now</a>
-  </div>
-</div>`}
-  
+    buyEmbed: `<div style="overflow:auto;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;width:259px;background:#FFFFFF;border:1px solid rgba(0,0,0,0.1);box-shadow:-2px 10px 5px rgba(0,0,0,0);border-radius:10px;font-family:SQ Market,Helvetica,Arial,sans-serif;">
+  <div style="padding:20px;">
+    <a target="_blank" href="https://square.link/u/uFSG91LU?src=embed" style="display:inline-block;font-size:18px;line-height:48px;height:48px;color:#000000;min-width:212px;background-color:#ffbf00;text-align:center;box-shadow:0 0 0 1px rgba(0,0,0,.1) inset;border-radius:0px;">Buy now</a>
+  </div></div>`
+  }
+  // add rest of your products here...
 ];
-
 
   const container = document.querySelector(".product-container");
 
   products.forEach(p => {
     const div = document.createElement("div");
-    div.className = "w3-col l3 m6 s12 product";
+    div.className = "product";
     div.innerHTML = `
       <img src="${p.image}" alt="${p.name}">
       <h4>${p.name}</h4>
       <p class="price">$${p.price}</p>
-
-      <!-- Square Buy Now Button Embed -->
       ${p.buyEmbed}
     `;
     container.appendChild(div);
@@ -434,17 +176,3 @@ const products = [
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
