--- a/store.html
+++ b/store.html
@@ -160,6 +160,24 @@ const products = [
     image: "product7.jpg",
     price: 629,
     buyEmbed: `<div style="overflow:auto;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;width:259px;background:#FFFFFF;border:1px solid rgba(0,0,0,0.1);box-shadow:-2px 10px 5px rgba(0,0,0,0);border-radius:10px;font-family:SQ Market, Helvetica, Arial, sans-serif;"><div style="padding:20px;"><a target="_blank" href="https://square.link/u/WXtCJLNJ?src=embed" style="display:inline-block;font-size:18px;line-height:48px;height:48px;color:#000000;min-width:212px;background-color:#ffbf00;text-align:center;box-shadow:0 0 0 1px rgba(0,0,0,.1) inset;border-radius:0;">Buy now</a></div></div>`
+  },
+    {
+    name: "1991 Classic Major Leauge Baseball Trivia series 2",
+    image: "product8.jpg",
+    price: 50,
+    buyEmbed: `<div style="overflow:auto;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;width:259px;background:#FFFFFF;border:1px solid rgba(0,0,0,0.1);box-shadow:-2px 10px 5px rgba(0,0,0,0);border-radius:10px;font-family:SQ Market, Helvetica, Arial, sans-serif;"><div style="padding:20px;"><a target="_blank" href="https://square.link/u/M9x2EiXz?src=embed" style="display:inline-block;font-size:18px;line-height:48px;height:48px;color:#000000;min-width:212px;background-color:#ffbf00;text-align:center;box-shadow:0 0 0 1px rgba(0,0,0,.1) inset;border-radius:0;">Buy now</a></div></div>`
+  },
+     {
+    name: "Nintendo gen1 and classic color Controllers and case",
+    image: "product9.jpg",
+    price: 230,
+    buyEmbed: `<div style="overflow:auto;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;width:259px;background:#FFFFFF;border:1px solid rgba(0,0,0,0.1);box-shadow:-2px 10px 5px rgba(0,0,0,0);border-radius:10px;font-family:SQ Market, Helvetica, Arial, sans-serif;"><div style="padding:20px;"><a target="_blank" href="https://square.link/u/30Us1moy?src=embed" style="display:inline-block;font-size:18px;line-height:48px;height:48px;color:#000000;min-width:212px;background-color:#ffbf00;text-align:center;box-shadow:0 0 0 1px rgba(0,0,0,.1) inset;border-radius:0;">Buy now</a></div></div>`
+  },
+     {
+    name: "Apple Pro Max Headphones",
+    image: "product10.jpg",
+    price: 500,
+    buyEmbed: `<div style="overflow:auto;display:flex;flex-direction:column;justify-content:flex-end;align-items:center;width:259px;background:#FFFFFF;border:1px solid rgba(0,0,0,0.1);box-shadow:-2px 10px 5px rgba(0,0,0,0);border-radius:10px;font-family:SQ Market,SQ Market,Helvetica,Arial,sans-serif;"><div style="padding:20px;"><a target="_blank" href="https://square.link/u/39Q5LFvj?src=embed" style="display:inline-block;font-size:18px;line-height:48px;height:48px;color:#000000;min-width:212px;background-color:#ffbf00;text-align:center;box-shadow:0 0 0 1px rgba(0,0,0,.1) inset;border-radius:0px;">Buy now</a></div></div>`
   }
   ];
 
@@ -181,5 +199,6 @@ const products = [
 
 </body>
 </html>
+
 
 
