--- a/store.html
+++ b/store.html
@@ -12,7 +12,7 @@
   body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
   .hero {
     background: url('pawnshop-front.png') center/cover no-repeat;
-    color:white;
+    color:yellow;
     padding:100px 20px;
   }
   .hero h1 {font-size:48px; font-weight:bold; text-shadow:2px 2px 6px #000;}
@@ -199,6 +199,7 @@ const products = [
 
 </body>
 </html>
+
 
 
 
